<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2025 ELIXIR ES, Spanish National Bioinformatics Institute (INB)
and Barcelona Supercomputing Center (BSC)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>es.bsc.inb.ga4gh</groupId>
    <artifactId>crypt4gh</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    
    <name>liquid-crypt4gh</name>

    <developers>
        <developer>
          <id>redmitry</id>
          <name>Dmitry Repchevsky</name>
          <email>redmitry@list.ru</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        
        <blake2b.version>2.0.0</blake2b.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.rfksystems</groupId>
            <artifactId>blake2b</artifactId>
            <version>${blake2b.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <finalName>liquid-crypt4gh</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>                  
                    <archive>
                        <manifest>
                            <mainClass>es.bsc.inb.ga4gh.jcrypt4gh.Crypt4gh</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <threadCount>1</threadCount>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>-Djava.nio.file.spi.DefaultFileSystemProvider=es.bsc.inb.ga4gh.jcrypt4gh.fs.Crypt4ghFileSystemProvider</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
